Ensure static assets resolve reliably

--- a/static/index.html
+++ b/static/index.html
@@ -9,7 +9,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     
     <!-- Link para o seu CSS customizado -->
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/static/styles.css">
 
     <!-- Configuração do Inter Font e Tailwind para garantir arredondamento -->
     <script>
@@ -196,6 +196,6 @@
     </div>
 
     <!-- Link para o seu JavaScript customizado -->
-    <script src="script.js"></script>
+    <script src="/static/script.js"></script>
 </body>
 </html>
